--- a/modules/scripts.html
+++ b/modules/scripts.html
@@ -1,4 +1,4 @@
-<script src="..\js\one.js"></script>
+<script src="js\one.js"></script>
     <!-- jQuery -->
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
@@ -6,7 +6,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- Card Script -->
-    <script src="..\js\card.js"></script>
+    <script src="js\card.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
