Still updating to 13/07

--- a/search.html
+++ b/search.html
@@ -44,7 +44,7 @@
                 <fieldset id="estilo">
                     <legend>Estilo</legend>
                     <label class="lmao">
-                        I'm a label
+                        <span>I'm a label</span>
                         <input
                         type="checkbox"
                         form="searchBar"
@@ -52,7 +52,7 @@
                         />
                     </label>
                     <label>
-                        I'm also a label
+                        <span>I'm also a label</span>
                         <input
                         type="checkbox"
                         form="searchBar"
