Updating search page.

--- a/search.html
+++ b/search.html
@@ -43,21 +43,21 @@
             <div class="col-sm-12 col-md-4 col-lg-3" id="searchForm">
                 <fieldset id="estilo">
                     <legend>Estilo</legend>
-                    <label class="lmao">
-                        <span>I'm a label</span>
+                    <label>
                         <input
                         type="checkbox"
                         form="searchBar"
                         name="estilos"
                         />
+                        <span>I'm a label</span>
                     </label>
                     <label>
-                        <span>I'm also a label</span>
                         <input
                         type="checkbox"
                         form="searchBar"
                         name="estilos"
                         />
+                        <span>I'm also a label</span>
                     </label>
                 </fieldset>
                 <fieldset id="oferta">
