--- a/sale.html
+++ b/sale.html
@@ -1,117 +1,54 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Fictichos</title>
-    <link rel="stylesheet" href="css/header.css"/>
-    <link rel="stylesheet" href="css/nav.css"/>
-    <link rel="stylesheet" href="css/sidebar.css"/>
-    <link rel="stylesheet" href="css/main.css"/>
-    <link rel="stylesheet" href="css/footer.css"/>
-    <link rel="stylesheet" href="css/general.css">
+    <title>Document</title>
+    <!-- Bootstrap -->
+<link
+href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+rel="stylesheet"
+integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+crossorigin="anonymous"
+/>
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
-
-<body class="container">
-    <header class="row">
-        <div class="row fuck">
-            <img src="https://picsum.photos/100" alt="" class="img-thumbnail col-2">
-            <p class="h1 col-8">Fictichos Calzado</p>
-            <form class="container-fluid justify-content-start col-1">
-                <button class="btn btn-outline-success me-2" type="button">Acceder</button>
+<body>
+    <div class="container-fluid">
+        <div class="row">
+            <h1>Confirmación de Compra</h1>
+        </div>
+        <div class="row">
+            <h3><strong>Nombre de Usuario:</strong></h3>
+            <h3>Número de Orden:</h3>
+            <h3>Fecha de Pedido</h3>
+        </div>
+        <div class="row" id="salesTable">
+            <div class="col-2">No.</div>
+            <div class="col-4">Producto</div>
+            <div class="col-3">Precio/Unidad</div>
+            <div class="col-3">Cantidad</div>
+        </div>
+        <div class="row">
+            <p>Al continuar con esta compra acepta los términos y condiciones</p>
+            <form action="confirmación.php" method="POST">
+                <label>
+                    <input type="checkbox" name="acuerdo" id="" required/> He leido y acepto los Términos y Condiciones de compra.
+                </label>
+                <label>
+                    <input type="checkbox" name="suscribir" id="" /> Suscribirme para obtener más ofertas.
+                </label>
+                <div class="g-recaptcha" data-sitekey="your_site_key"></div>
+                <br/>
+                <input type="submit" value="Comfirmar Pedido">
+                <input type="reset" value="Cancelar" />
             </form>
-            <form class="container-fluid justify-content-start col-1">
-                <button class="btn btn-outline-success me-2" type="button">Inscribirse</button>
-            </form>
         </div>
-    </header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-dark bg-dark">
-        <div class="container-fluid">
-        <a class="navbar-brand" href="#">Fictichos</a>
-        </div>
-        <form class="container-fluid justify-content-start">
-        <button class="btn btn-outline-success me-2" type="button">Menú Principal</button>
-        </form>
-        <form class="container-fluid justify-content-start">
-            <button class="btn btn-outline-success me-2" type="button">About</button>
-        </form>
-        <form class="container-fluid justify-content-start">
-        <button class="btn btn-outline-success me-2" type="button">Contacto</button>
-        </form>
-        <form class="container-fluid">
-            <div class="input-group">
-              <span class="input-group-text" id="basic-addon1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-              </svg></span>
-              <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
-            </div>
-          </form>
-    </nav>
-    <main class="row">
-            <div class="container">
-                <div class="row">
-                    <h1>Datos del Usuario</h1>
-                </div>
-                <div class="row">
-                    <h4>Usuario: usuario</h4>
-                    <h4>Forma de Pago: elegida</h4>
-                    <h4>Términos de la venta</h4>
-                </div>
-                <div class="row">
-                    <h3 class="col-2">Article</h3>
-                    <h3 class="col-2">Precio</h3>
-                    <h3 class="col-2">$$$</h3>
-                    <h3 class="col-4">Retirar del carro</h3>
-                </div>
-                <div class="row">
-                    <h3 class="col-2">Article</h3>
-                    <h3 class="col-2">Precio</h3>
-                    <h3 class="col-2">$$$</h3>
-                    <h3 class="col-4">Retirar del carro</h3>
-                </div>
-                <div class="row">
-                    <h3 class="col-2">Article</h3>
-                    <h3 class="col-2">Precio</h3>
-                    <h3 class="col-2">$$$</h3>
-                    <h3 class="col-4">Retirar del carro</h3>
-                </div>
-                <div class="row">
-                    <h3 class="col-2">Total</h3>
-                    <h3 class="col-2"></h3>
-                    <h3 class="col-2">$$$</h3>
-                    <h3 class="col-4">Cancelar</h3>
-                </div>
-            </div>
-    </main>
-
-    <footer class="row">
-        <div class="col-4">
-            <ul>
-                <li>Here</li>
-                <li>goes</li>
-                <li>stuff</li>
-                <li>asdasdasd</li>
-            </ul>
-        </div>
-        <div class="col-4">
-            <ul>
-                <li>Here</li>
-                <li>goes</li>
-                <li>stuff</li>
-                <li>asdasdasd</li>
-            </ul>
-        </div>
-        <div class="col-4">
-            <ul>
-                <li>Here</li>
-                <li>goes</li>
-                <li>stuff</li>
-                <li>asdasdasd</li>
-            </ul>
-        </div>
-        <p>More legalese goes here.</p>
-    </footer>
+    </div>
+    
+<script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
+async defer>
+</script>
 </body>
 </html>
