Cambios en la página de confirmación

--- a/sale.html
+++ b/sale.html
@@ -13,22 +13,117 @@ integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmV
 crossorigin="anonymous"
 />
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+<link rel="stylesheet" href="css\confirmSale.css">
 </head>
 <body>
     <div class="container-fluid">
         <div class="row">
             <h1>Confirmación de Compra</h1>
         </div>
-        <div class="row">
-            <h3><strong>Nombre de Usuario:</strong></h3>
-            <h3>Número de Orden:</h3>
-            <h3>Fecha de Pedido</h3>
+        <div class="row" id="datosSale">
+                <h3><strong>Nombre de Usuario:</strong></h3>
+                <h3>Número de Orden:</h3>
+                <h3>Fecha de Pedido</h3>
+                <h3>Dirección de Envio</h3>
+                <h3>Agregar otra dirección:</h3>
+            </div>
         </div>
         <div class="row" id="salesTable">
-            <div class="col-2">No.</div>
-            <div class="col-4">Producto</div>
-            <div class="col-3">Precio/Unidad</div>
-            <div class="col-3">Cantidad</div>
+            <div class="container row" id="tHeader">
+                <div class="col-1">No.</div>
+                <div class="col-5">Producto</div>
+                <div class="col-3">Precio/Unidad</div>
+                <div class="col-3">Cantidad</div>
+            </div>
+            <div class="row salesTableElement">
+                <div class="col-1">No.</div>
+                <div class="col-5">Producto</div>
+                <div class="col-3">Precio/Unidad</div>
+                <div class="col-3">Cantidad</div>
+            </div>
+            <div class="row salesTableElement">
+                <div class="col-1">No.</div>
+                <div class="col-5">Producto</div>
+                <div class="col-3">Precio/Unidad</div>
+                <div class="col-3">Cantidad</div>
+            </div>
+            <div class="row salesTableElement">
+                <div class="col-1">No.</div>
+                <div class="col-5">Producto</div>
+                <div class="col-3">Precio/Unidad</div>
+                <div class="col-3">Cantidad</div>
+            </div>
+            <div class="row salesTableElement">
+                <div class="col-1">No.</div>
+                <div class="col-5">Producto</div>
+                <div class="col-3">Precio/Unidad</div>
+                <div class="col-3">Cantidad</div>
+            </div>
+            <div class="row salesTableElement">
+                <div class="col-1">No.</div>
+                <div class="col-5">Producto</div>
+                <div class="col-3">Precio/Unidad</div>
+                <div class="col-3">Cantidad</div>
+            </div>
+            <div class="row salesTableElement">
+                <div class="col-1">No.</div>
+                <div class="col-5">Producto</div>
+                <div class="col-3">Precio/Unidad</div>
+                <div class="col-3">Cantidad</div>
+            </div>
+            <div class="row salesTableElement">
+                <div class="col-1">No.</div>
+                <div class="col-5">Producto</div>
+                <div class="col-3">Precio/Unidad</div>
+                <div class="col-3">Cantidad</div>
+            </div>
+            <div class="row salesTableElement">
+                <div class="col-1">No.</div>
+                <div class="col-5">Producto</div>
+                <div class="col-3">Precio/Unidad</div>
+                <div class="col-3">Cantidad</div>
+            </div>
+            <div class="row salesTableElement">
+                <div class="col-1">No.</div>
+                <div class="col-5">Producto</div>
+                <div class="col-3">Precio/Unidad</div>
+                <div class="col-3">Cantidad</div>
+            </div>
+            <div class="row salesTableElement">
+                <div class="col-1">No.</div>
+                <div class="col-5">Producto</div>
+                <div class="col-3">Precio/Unidad</div>
+                <div class="col-3">Cantidad</div>
+            </div>
+            <div class="row salesTableElement">
+                <div class="col-1">No.</div>
+                <div class="col-5">Producto</div>
+                <div class="col-3">Precio/Unidad</div>
+                <div class="col-3">Cantidad</div>
+            </div>
+            <div class="row salesTableElement">
+                <div class="col-1">No.</div>
+                <div class="col-5">Producto</div>
+                <div class="col-3">Precio/Unidad</div>
+                <div class="col-3">Cantidad</div>
+            </div><div class="row salesTableElement">
+                <div class="col-1">No.</div>
+                <div class="col-5">Producto</div>
+                <div class="col-3">Precio/Unidad</div>
+                <div class="col-3">Cantidad</div>
+            </div>
+            <div class="row salesTableElement">
+                <div class="col-1">No.</div>
+                <div class="col-5">Producto</div>
+                <div class="col-3">Precio/Unidad</div>
+                <div class="col-3">Cantidad</div>
+            </div>
+            <div class="row salesTableElement">
+                <div class="col-1">No.</div>
+                <div class="col-5">Producto</div>
+                <div class="col-3">Precio/Unidad</div>
+                <div class="col-3">Cantidad</div>
+            </div>
         </div>
         <div class="row">
             <p>Al continuar con esta compra acepta los términos y condiciones</p>
