--- a/sale.html
+++ b/sale.html
@@ -21,12 +21,6 @@ crossorigin="anonymous"
             <h1>Confirmación de Compra</h1>
         </div>
         <div class="row" id="datosSale">
-                <h3><strong>Nombre de Usuario:</strong></h3>
-                <h3>Número de Orden:</h3>
-                <h3>Fecha de Pedido</h3>
-                <h3>Dirección de Envio</h3>
-                <h3>Agregar otra dirección:</h3>
-            </div>
         </div>
         <div class="row" id="salesTable">
             <div class="container row" id="tHeader">
@@ -145,5 +139,7 @@ crossorigin="anonymous"
 <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
 async defer>
 </script>
+<script src="js\one.js"></script>
+<script>userOrder();</script>
 </body>
 </html>
