--- a/search.html
+++ b/search.html
@@ -21,20 +21,20 @@
     <link rel="stylesheet" href="css\carrusel.css">
     <link rel="stylesheet" href="css\offers.css">
     <link rel="stylesheet" href="css\footer.css">
+    <link rel="stylesheet" href="css\colors.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-12">
-                <form action="search.php" id="searchBar" role="search">
-                    <label for="searchInput">
+                <form action="search.php" id="searchBar" role="search" method="GET">
+                    <label>
                         <img src="img\svg\search.svg" alt="">
+                        <input
+                        type="search"
+                        name="searchText"
+                        />
                     </label>
-                    <input
-                    type="search"
-                    name="searchText"
-                    id="searchInput"
-                    />
                 </form>
             </div>
         </div>
@@ -43,34 +43,26 @@
             <div class="col-sm-12 col-md-4 col-lg-3" id="searchForm">
                 <fieldset id="estilo">
                     <legend>Estilo</legend>
-                    <label>
-                        <input
-                        type="checkbox"
-                        form="searchBar"
-                        name="estilos"
-                        />
-                        <span>I'm a label</span>
-                    </label>
-                    <label>
-                        <input
-                        type="checkbox"
-                        form="searchBar"
-                        name="estilos"
-                        />
-                        <span>I'm also a label</span>
-                    </label>
                 </fieldset>
                 <fieldset id="oferta">
                     <legend>
                         Descuentos
                     </legend>
                     <label>
+                        Rebajas
                         <input
                         form="searchForm"
-                        name=""
-                        type="checkbox"
+                        name="offer"
+                        type="radio"
                         />
-                        Surprisingly I'm also a label.
+                    </label>
+                    <label>
+                        <input
+                        form="searchForm"
+                        name="offer"
+                        type="radio"
+                        />
+                        Todo
                     </label>
                 </fieldset>
                 <fieldset id="calificacion">
@@ -92,12 +84,26 @@
                         Precio
                     </legend>
                     <label>
-                        Precio Mínimo
-                        <input type="number" name="minNumber"/>
+                        min
+                        <input
+                        type="number"
+                        name="minNumber"
+                        size="5"
+                        min="150"
+                        max="2999"
+                        value="150"
+                        />
                     </label>
                     <label>
-                        Precio máximo
-                        <input type="number" name="maxNumber"/>
+                        max
+                        <input
+                        type="number"
+                        name="maxNumber"
+                        size="5"
+                        min="150"
+                        max="2999"
+                        value="2999"
+                        />
                     </label>
                 </fieldset>
     
@@ -105,58 +111,49 @@
                     <legend>
                         Género
                     </legend>
-                    <label>
-                        <input
-                        type="checkbox"
-                        name="genSearch"
-                        value="dama"
-                        />&ensp;Dama
-                    </label>
-                    <label>
-                        <input
-                        type="checkbox"
-                        name="genSearch"
-                        value="caballero"
-                        />&ensp;Caballeros
-                    </label>
-                    <label>
-                        <input
-                        type="checkbox"
-                        name="genSearch"
-                        value="unisex"
-                        />&ensp;Unisex
-                    </label>
-                    <label>
-                        <input
-                        type="checkbox"
-                        name="genSearch"
-                        value="niños"
-                        />&ensp;Infantil
-                    </label>
+                    <div class="flexbox">
+                        <label>
+                            <input
+                            type="checkbox"
+                            name="genSearch"
+                            value="dama"
+                            />&ensp;Dama
+                        </label>
+                        <label>
+                            <input
+                            type="checkbox"
+                            name="genSearch"
+                            value="caballero"
+                            />&ensp;Caballeros
+                        </label>
+                        <label>
+                            <input
+                            type="checkbox"
+                            name="genSearch"
+                            value="unisex"
+                            />&ensp;Unisex
+                        </label>
+                        <label>
+                            <input
+                            type="checkbox"
+                            name="genSearch"
+                            value="niños"
+                            />&ensp;Infantil
+                        </label>
+                    </div>
                 </fieldset>
                 <fieldset id="marca">
                     <legend>
                         Marca
                     </legend>
-                    <label>
-                        <input
-                        type="checkbox"
-                        name="brandSearch"
-                        value=""
-                        />&ensp;Marca
-                    </label>
                 </fieldset>
-                <fieldset id="marca">
+                <fieldset id="colorFlex">
                     <legend>
-                        Marca
+                        Color
                     </legend>
-                    <label>
-                        <input
-                        type="checkbox"
-                        name="colorSearch"
-                        value=""
-                        />&ensp;COLOR
-                    </label>
+                    <div class="flexbox" id="color">
+
+                    </div>
                 </fieldset>
             </div>
             <div class="col-sm-12 col-md-8 col-lg-3" id="searchResults">
@@ -169,5 +166,6 @@
                 </article>
             </div>
     </div>
+    <script src="js\search.js"></script>
 </body>
 </html>
