--- a/sale.html
+++ b/sale.html
@@ -14,120 +14,35 @@ crossorigin="anonymous"
 />
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <link rel="stylesheet" href="css\confirmSale.css">
+<link rel="stylesheet" href="css\colors.css">
 </head>
 <body>
     <div class="container-fluid">
         <div class="row">
-            <h1>Confirmación de Compra</h1>
+            <h1 id="titleSale">Confirmación de Compra</h1>
         </div>
-        <div>
-            <div class="row" id="datosSale">
-            </div>
-            <div class="accordion" id="payments">
-                <!-- <?php
-                include "modules\acordeon.php";
-                ?> -->
+        <div class="row container" id="datosSale">
+            <div class="row" id="printSale">
+                <div class="col-4">
+
+                </div>
+                <div class="col-8">
+                    <div class="accordion" id="payments">
+                        <div id="ppplus"></div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row" id="salesTable">
-            <div class="container row" id="tHeader">
+            <div class="row" id="tHeader">
                 <div class="col-1">No.</div>
-                <div class="col-5">Producto</div>
-                <div class="col-3">Precio/Unidad</div>
-                <div class="col-3">Cantidad</div>
-            </div>
-            <div class="row salesTableElement">
-                <div class="col-1">No.</div>
-                <div class="col-5">Producto</div>
-                <div class="col-3">Precio/Unidad</div>
-                <div class="col-3">Cantidad</div>
-            </div>
-            <div class="row salesTableElement">
-                <div class="col-1">No.</div>
-                <div class="col-5">Producto</div>
-                <div class="col-3">Precio/Unidad</div>
-                <div class="col-3">Cantidad</div>
-            </div>
-            <div class="row salesTableElement">
-                <div class="col-1">No.</div>
-                <div class="col-5">Producto</div>
-                <div class="col-3">Precio/Unidad</div>
-                <div class="col-3">Cantidad</div>
-            </div>
-            <div class="row salesTableElement">
-                <div class="col-1">No.</div>
-                <div class="col-5">Producto</div>
-                <div class="col-3">Precio/Unidad</div>
-                <div class="col-3">Cantidad</div>
-            </div>
-            <div class="row salesTableElement">
-                <div class="col-1">No.</div>
-                <div class="col-5">Producto</div>
-                <div class="col-3">Precio/Unidad</div>
-                <div class="col-3">Cantidad</div>
-            </div>
-            <div class="row salesTableElement">
-                <div class="col-1">No.</div>
-                <div class="col-5">Producto</div>
-                <div class="col-3">Precio/Unidad</div>
-                <div class="col-3">Cantidad</div>
-            </div>
-            <div class="row salesTableElement">
-                <div class="col-1">No.</div>
-                <div class="col-5">Producto</div>
-                <div class="col-3">Precio/Unidad</div>
-                <div class="col-3">Cantidad</div>
-            </div>
-            <div class="row salesTableElement">
-                <div class="col-1">No.</div>
-                <div class="col-5">Producto</div>
-                <div class="col-3">Precio/Unidad</div>
-                <div class="col-3">Cantidad</div>
-            </div>
-            <div class="row salesTableElement">
-                <div class="col-1">No.</div>
-                <div class="col-5">Producto</div>
-                <div class="col-3">Precio/Unidad</div>
-                <div class="col-3">Cantidad</div>
-            </div>
-            <div class="row salesTableElement">
-                <div class="col-1">No.</div>
-                <div class="col-5">Producto</div>
-                <div class="col-3">Precio/Unidad</div>
-                <div class="col-3">Cantidad</div>
-            </div>
-            <div class="row salesTableElement">
-                <div class="col-1">No.</div>
-                <div class="col-5">Producto</div>
-                <div class="col-3">Precio/Unidad</div>
-                <div class="col-3">Cantidad</div>
-            </div>
-            <div class="row salesTableElement">
-                <div class="col-1">No.</div>
-                <div class="col-5">Producto</div>
-                <div class="col-3">Precio/Unidad</div>
-                <div class="col-3">Cantidad</div>
-            </div><div class="row salesTableElement">
-                <div class="col-1">No.</div>
-                <div class="col-5">Producto</div>
-                <div class="col-3">Precio/Unidad</div>
-                <div class="col-3">Cantidad</div>
-            </div>
-            <div class="row salesTableElement">
-                <div class="col-1">No.</div>
-                <div class="col-5">Producto</div>
-                <div class="col-3">Precio/Unidad</div>
-                <div class="col-3">Cantidad</div>
-            </div>
-            <div class="row salesTableElement">
-                <div class="col-1">No.</div>
-                <div class="col-5">Producto</div>
-                <div class="col-3">Precio/Unidad</div>
-                <div class="col-3">Cantidad</div>
+                <div class="col-6">Producto</div>
+                <div class="col-2">Precio/Unidad</div>
+                <div class="col-2">Cantidad</div>
+                <div class="col-1">Quitar</div>
             </div>
         </div>
         <div class="row">
-            <p>Al continuar con esta compra acepta los términos y condiciones</p>
             <form action="confirmación.php" method="POST">
                 <label>
                     <input type="checkbox" name="acuerdo" id="" required/> He leido y acepto los Términos y Condiciones de compra.
@@ -137,7 +52,11 @@ crossorigin="anonymous"
                 </label>
                 <div class="g-recaptcha" data-sitekey="your_site_key"></div>
                 <br/>
-                <input type="submit" value="Comfirmar Pedido">
+                <button
+                type="submit"
+                value="Comfirmar Pedido"
+                id="continueButton"
+                onclick="ppp.doContinue();return false;"></button>
                 <input type="reset" value="Cancelar" />
             </form>
         </div>
@@ -148,5 +67,15 @@ async defer>
 </script>
 <script src="js\one.js"></script>
 <script>userOrder('José','a23423423','Onwasda','empty');</script>
+<script>drawOrder(1,'asdasd',548.06,2);</script>
+<script>drawOrder(1,'asdasd',548.06,2);</script>
+<script src="https://www.paypalobjects.com/webstatic/ppplusdcc/ppplusdcc.min.js" type="text/javascript"></script>
+<script type="application/javascript">
+    var ppp = PAYPAL.apps.PPP({
+    "approvalUrl": "'.$approval_url.'",
+        "placeholder": "ppplus",
+        "mode": "sandbox",});
+</script>
+<script src="js\paypalPlaholder.js"></script>
 </body>
-</html>
+</html> 
