LogIn and SignUp systems done

--- a/sale.html
+++ b/sale.html
@@ -13,8 +13,8 @@ integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmV
 crossorigin="anonymous"
 />
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-<link rel="stylesheet" href="css\confirmSale.css">
-<link rel="stylesheet" href="css\colors.css">
+<link rel="stylesheet" href="css/confirmSale.css">
+<link rel="stylesheet" href="css/colors.css">
 </head>
 <body>
     <div class="container-fluid">
@@ -65,7 +65,7 @@ crossorigin="anonymous"
 <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
 async defer>
 </script>
-<script src="js\one.js"></script>
+<script src="js/one.js"></script>
 <script>userOrder('José','a23423423','Onwasda','empty');</script>
 <script>drawOrder(1,'asdasd',548.06,2);</script>
 <script>drawOrder(1,'asdasd',548.06,2);</script>
@@ -76,6 +76,6 @@ async defer>
         "placeholder": "ppplus",
         "mode": "sandbox",});
 </script>
-<script src="js\paypalPlaholder.js"></script>
+<script src="js/paypalPlaceholder.js"></script>
 </body>
 </html> 
