--- a/search.html
+++ b/search.html
@@ -12,16 +12,16 @@
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
     crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css\rating.css">
-    <link rel="stylesheet" href="css\searchPage.css">
-    <link rel="stylesheet" href="css\style.css" />
-    <link rel="stylesheet" href="css\encabezado.css" />
-    <link rel="stylesheet" href="css\usuario.css" />
-    <link rel="stylesheet" href="css\search.css">
-    <link rel="stylesheet" href="css\carrusel.css">
-    <link rel="stylesheet" href="css\offers.css">
-    <link rel="stylesheet" href="css\footer.css">
-    <link rel="stylesheet" href="css\colors.css">
+    <link rel="stylesheet" href="css/rating.css">
+    <link rel="stylesheet" href="css/searchPage.css">
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/encabezado.css" />
+    <link rel="stylesheet" href="css/usuario.css" />
+    <link rel="stylesheet" href="css/search.css">
+    <link rel="stylesheet" href="css/carrusel.css">
+    <link rel="stylesheet" href="css/offers.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/colors.css">
 </head>
 <body>
     <div class="container-fluid">
@@ -29,7 +29,7 @@
             <div class="col-12">
                 <form action="search.php" id="searchBar" role="search" method="GET">
                     <label>
-                        <img src="img\svg\search.svg" alt="">
+                        <img src="img/svg/search.svg" alt="">
                         <input
                         type="search"
                         name="searchText"
@@ -158,7 +158,7 @@
             </div>
             <div class="col-sm-12 col-md-8 col-lg-3" id="searchResults">
                 <article class="searchArticle">
-                    <img src="img\placeholderRAT.jpg" alt="" width="100vw"/>
+                    <img src="img/placeholderRAT.jpg" alt="" width="100vw"/>
                     <h3>Item Title</h3>
                     <h4>Precio</h4>
                     <h4>Descripción</h4>
@@ -166,6 +166,6 @@
                 </article>
             </div>
     </div>
-    <script src="js\search.js"></script>
+    <script src="js/search.js"></script>
 </body>
 </html>
